# hpc-map-reduce

./: README.md
algorithm/: Makefile
algorithm/include/: config.h  hash_map.h  omp_parallel.h  parallel.h  serial.h  tokenizer.h  utils.h
algorithm/src/: hash_map.c  main.c  main.cpp  parallel.c  parallel.cpp  serial.c  serial.cpp  tokenizer.c  tokenizer.cpp  utils.c  utils.cpp
input-text/: Anna-Karenina.txt  test.txt  text.txt
spark-implementation/: pyproject.toml
spark-implementation/spark_implementation/: main.py  paths.py
